-
Bug
-
Resolution: Done
-
P4: Low
-
5.15.2
-
None
-
-
fb33e2a8e82cfc28cf3c3c4bad657e0400640cb2 (qt/qtbase/dev) 24367caa7568f48df5e03bacfddbc734884a0a85 (qt/qttools/dev)
"Affects Version/s" can't be set to "All", so I'm only setting 5.15.2
In the source code of lupdate the detection of the macro is handled, but the macro itself seems to be missing from qglobal.h.
Workaround: simply defining QT_TRID_N_NOOP oneself and using it causes lupdate to pick it up correctly and plural forms are generated in the ts files.
- resulted from
-
QTBUG-3945 QT_TRANSLATE_NOOP does not cover plurals
-
- Closed
-
| For Gerrit Dashboard: QTBUG-98277 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 381042,9 | Add missing QT_TRID_N_NOOP definition | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 381056,2 | Add documentation for QT_TRID_N_NOOP macro | dev | qt/qttools | Status: MERGED | +2 | 0 |