src/corelib/global/qglobal.h
@@ -1358,6 +1358,7 @@ template <typename Ptr> inline auto qGetPtrHelper(Ptr &ptr) noexcept -> decltype
 Q_CORE_EXPORT QString qtTrId(const char *id, int n = -1);
 
 #define QT_TRID_NOOP(id) id
+#define QT_TRID_N_NOOP(id) id
 
 #endif // QT_NO_TRANSLATION
 
